--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@ function MM_swapImage() { //v3.0
           <p>Cuarto semestre Grupo;          
           <p>CBTis 16<br>
           </div>
-        <div>
-          <img src="imagenes/mimi.jpg" width="114" height="25%" ></div>
+        <div><img src="imagenes/mimi.jpg" width="256" height="39%" ></div>
      </div>
           </div>
           
@@ -153,17 +152,17 @@ El objeto de estudio de la Enfermería es el cuidado de la salud de la persona s
 Los alumnos requerirán dedicarle tiempo completo a la carrera, sobre todo en los primeros semestres.
 Durante la misma se realizan gastos para uniformes, libros y materiales, así como para el transporte a los campos clínicos hospitalarios y comunitarios.</p>
 <p>la Licenciatura en Enfermería y Licenciatura en Enfermería y Obstetricia capaz de aplicar estrategias de enseñanza aprendizaje en cada uno de los espacios que estén los universitarios, que de cómo resultado la formación de profesionales de enfermería con sólidos conocimientos disciplinarios, científicos y humanísticos; que impacten en la satisfacción de la sociedad y el éxito profesional de los egresados.<br></p>
-  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('pos','','imagenes/pos2.jpg',1)"><img src="imagenes/pos.jpg" width="25%" height="25%" id="pos"></a> <br>
+  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('pos','','imagenes/pos2.jpg',1)"><img src="imagenes/pos.jpg" width="34%" height="50%" id="pos"></a> <br>
       <br>
       <p>-No realices actividades al aire libre y si es posible no salgas.<br>
       -Para los ojos, usa lentes protectores, especialmente si usas lentes de contacto.<br>
       -Ante la caida de ceniza volcanica evita consumir alimentos en la via publica.<br>
       -Cubre tinacos, cisternas y depositos de agua.<br></p>
-      <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('estasss','','imagenes/0eu.jpg',1)"><img src="imagenes/eu.jpg" width="20%" height="20%" id="estasss"></a> 
+      <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('estasss','','imagenes/0eu.jpg',1)"><img src="imagenes/eu.jpg" width="36%" height="38%" id="estasss"></a> 
       <br>
        
       <br>
-       <img src="imagenes/tem.jpg" width="155" height="30%" >
+       <img src="imagenes/tem.jpg" width="441" height="63%" >
       <p>Total de asignaturas: 51<br>
 Asignaturas Obligatorias: 45<br>
 Asignaturas Optativas: 6<br>
@@ -192,25 +191,25 @@ Actividades culturales<br>
    <div data-role="collapsible" data-content-theme="false">
    <h1>Facultad de medicina (BUAP)</h1>
    <div>
-   <img src="imagenes/bene.jpg" width="191" height="35%" >
+   <img src="imagenes/bene.jpg" width="368" height="49%" >
    <p>Sede donde se ofrece:<br>
 -Puebla<br>
 -Tehuacán<br>
 </p>
-<img src="imagenes/be.jpg" width="156" height="35%" >
+<img src="imagenes/be.jpg" width="345" height="48%" >
 
 <p>Perfil de Ingreso<br></p>
 <br>
-<img src="imagenes/mis.jpg" width="134" height="35%" >
+<img src="imagenes/mis.jpg" width="355" height="64%" >
 <br>
 <p>Los estudiantes de nuevo ingreso deberán contar con los siguientes atributos:<br></p>
 <br>
-<img src="imagenes/meto.jpg" width="169" height="35%" >
+<img src="imagenes/meto.jpg" width="394" height="61%" >
 <br>
 <p>Conocimientos: Bases de las Ciencias Naturales, de las Ciencias Exactas y de las Ciencias Sociales y Dominio de la lengua española<br>
 Habilidades: Para la comunicación oral, escrita y corporal. Pensamiento lógico matemático. Comprensión de la lectura en el idioma inglés.<br>
 Actitudes y valores: Disposición para el trabajo colaborativo y grupal. Disposición para el autoaprendizaje y la actualización continua. Alto sentido de responsabilidad, vocación de servicio y respeto a sus semejantes.<br></p>
-<img src="imagenes/facul.jpg" width="90" height="25%" >
+<img src="imagenes/facul.jpg" width="216" height="46%" >
 <p>PLAN DE ESTUDIOS.
 NIVEL BASICO:<br>
 <br>
@@ -244,14 +243,14 @@ LENGUA EXTRANJERA IV<br>
 Conocimientos: Bases de las Ciencias Naturales, de las Ciencias Exactas y de las Ciencias Sociales y Dominio de la lengua española
 Habilidades: Para la comunicación oral, escrita y corporal. Pensamiento lógico matemático.  Comprensión de la lectura en el idioma inglés.
 Actitudes y valores: Disposición para el trabajo colaborativo y grupal. Disposición  para el autoaprendizaje y la actualización continua. Alto sentido de responsabilidad, vocación de servicio y respeto a sus semejantes. <br></p>
-<img src="imagenes/g.jpg" width="167" height="35%" >
+<img src="imagenes/g.jpg" width="364" height="50%" >
    <a href="http://www.buap.mx/portal_pprd/wb/EDUCATIVA/medicina"><center> 
      <p>Dar click aquí</p>
      <p>&nbsp;</p>
    </center></a>
    </div>
    <div>
-     <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('ju','','imagenes/estaa.jpg',1)"><img src="imagenes/b.jpg" width="229" height="186" id="ju"></a> </div>
+     <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('ju','','imagenes/estaa.jpg',1)"><img src="imagenes/b.jpg" width="307" height="190" id="ju"></a> </div>
  </div>
  </div>
 <div data-role="footer" data-theme="a" data-position="fixed">
@@ -267,7 +266,7 @@ Actitudes y valores: Disposición para el trabajo colaborativo y grupal. Disposi
   </h1></div>
 <div data-role="content" align="center">
   <div>
-  <img src="imagenes/in.jpg" width="152" height="32%" >
+  <img src="imagenes/in.jpg" width="383" height="66%" >
   <p>El plan de estudios consta de diez semestres, tiempo en el cual los cadetes permanecen  internos en el plantel, al egresar serán, ascendidos al grado de Guardiamarinas del Servicio de Ingenieros de la Armada, Ingeniero Mecánico Naval, (percibiendo el sueldo correspondiente a la jerarquía) quedando comisionados en unidades operativas por un año para la realización de sus prácticas profesionales.</p>
   <p>La formación académica es integral. La curricular contempla asignaturas tanto del área de las ciencias físicas y matemáticas como de las áreas de humanística, profesional y militar.<br>
 
@@ -277,7 +276,7 @@ Actitudes y valores: Disposición para el trabajo colaborativo y grupal. Disposi
   Aplicas la freseología de las comunicaciones aéreas.<br>
 <p>La Heroica Escuela Naval Militar es un establecimiento de Educación Superior, cuya misión es la formación de oficiales para la Armada de México, con los conocimientos y doctrinas inherentes a la profesión naval militar.<br>
   La formación académica es integral. La currícula contempla asignaturas tanto del área de las ciencias físicas y matemáticas como de las áreas de humanística, económica, administrativa y militar</p>
-<img src="imagenes/d.jpg" width="220" height="38%" >
+<img src="imagenes/d.jpg" width="322" height="51%" >
 <p>En el poblado de Antón Lizardo, Veracruz a 32 kilómetros al sureste del puerto de Veracruz, Ver., se alzan las instalaciones de la Heroica Escuela Naval Militar. Este centro educativo es un amplio recinto que alberga un dinámico complejo arquitectónico, cuyo centro lo constituye el patio de honor donde se realizan las diversas ceremonias, entre ellas la de graduación de los cadetes y la del 21 de abril (la cual conmemora la defensa del Puerto de Veracruz en 1914).<br></p>
 <br>
 <img src="imagenes/inop.jpg" width=">35%" height="35%" >
@@ -293,7 +292,7 @@ En este mismo plantel hay un centro de convivencias " Club de Cadetes", un gimna
 
 No dejemos pasar que los cadetes estan internados durante un periodo de 5 años, y donde se le brinda a todo el personal area de descanso y dormitorios, donde tienen su espacio para estudio, locker para guardar artìculos personales y tener listo su uniforme dia a dia. <br></p>
 <p><br>
-  <img src="imagenes/o.jpg" width="171" height="29%" >
+  <img src="imagenes/o.jpg" width="360" height="50%" >
 </p>
 <p>&nbsp;</p>
 <a href="http://www.henm.edu.mx/CAN.html"><center> 
@@ -302,7 +301,7 @@ No dejemos pasar que los cadetes estan internados durante un periodo de 5 años,
 </center></a>
  <br>
  <p>La formación académica es integral. La curricular contempla asignaturas tanto del área de las ciencias físicas y matemáticas como de las áreas de humanística, profesional y militar.</p>
-    <img src="imagenes/inapro.jpg" width="248" height="42%" >
+    <img src="imagenes/inapro.jpg" width="369" height="67%" >
  </div>
 <div data-role="footer" data-theme="a" data-position="fixed">
      <h4>Aplicacion Carreras Universitarias, NPP</h4>
@@ -344,7 +343,7 @@ Realización de investigaciones diagnósticas de tipo social, organizacional y e
 Dominar la metodología de la disciplina para conocer, a través de la investigación, los procesos psicológicos que determinan la conducta del individuo, e intervenir objetivamente en los diversos campos de interacción social.</p>
 <a href="http://www.universidaduvm.mx/licenciatura-en-psicologia/"><center> Dar click aquí</center></a>
  <br>
- <img src="imagenes/r.jpg" width="258" height="35%" >
+ <img src="imagenes/r.jpg" width="417" height="56%" >
  <br>
  <p>Esta Licenciatura UVM está respaldada por la Red Iberoamericana de Psicología Laureate (RIPLA), que fomenta relaciones académicas muy productivas entre universidades de México, Brasil, España, Costa Rica, Perú, Chile, Ecuador y Panamá</p>
  <p>Campus que lo imparten</p>
