--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@ function MM_swapImage() { //v3.0
 <body onLoad="MM_preloadImages('imagenes/estaa.jpg','imagenes/0eu.jpg','imagenes/pos2.jpg','imagenes/in1.jpg')">
 <div data-role="page" id="Principal" data-theme="a" >
      <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
-     <h1>CARRERAS QUE QUISIERA ESTUDIAR</h1>
+     <h1>CARRERAS UNIVERSITARIAS</h1>
    </div>
    <div data-role="main" class="ui-content" >
       <div data-role="collapsible" data-content-theme="false" >
-         <h1> DESARROLLADO POR</h1>
+         <h1> DESARROLLADO POR:</h1>
           <div>
           <!-- Start WOWSlider.com BODY section -->
 	<div id="wowslider-container1">
@@ -81,9 +81,9 @@ function MM_swapImage() { //v3.0
 	<!-- End WOWSlider.com BODY section -->
           <p>Nohemi Perez Paredes                    
           <p>Cuarto semestre Grupo;          
-          <p>CBTis 16<br>
+          <p>Centro de Bachillerato Tecnológico Industrial y de Servicios No. <em>16</em><br>
           </div>
-        <div><img src="imagenes/mimi.jpg" width="256" height="39%" ></div>
+        <div><img src="imagenes/mimi.jpg" width="377" height="50%" ></div>
      </div>
           </div>
           
@@ -152,17 +152,17 @@ El objeto de estudio de la Enfermería es el cuidado de la salud de la persona s
 Los alumnos requerirán dedicarle tiempo completo a la carrera, sobre todo en los primeros semestres.
 Durante la misma se realizan gastos para uniformes, libros y materiales, así como para el transporte a los campos clínicos hospitalarios y comunitarios.</p>
 <p>la Licenciatura en Enfermería y Licenciatura en Enfermería y Obstetricia capaz de aplicar estrategias de enseñanza aprendizaje en cada uno de los espacios que estén los universitarios, que de cómo resultado la formación de profesionales de enfermería con sólidos conocimientos disciplinarios, científicos y humanísticos; que impacten en la satisfacción de la sociedad y el éxito profesional de los egresados.<br></p>
-  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('pos','','imagenes/pos2.jpg',1)"><img src="imagenes/pos.jpg" width="34%" height="50%" id="pos"></a> <br>
+  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('pos','','imagenes/pos2.jpg',1)"><img src="imagenes/pos.jpg" width="44%" height="81%" id="pos"></a> <br>
       <br>
       <p>-No realices actividades al aire libre y si es posible no salgas.<br>
       -Para los ojos, usa lentes protectores, especialmente si usas lentes de contacto.<br>
       -Ante la caida de ceniza volcanica evita consumir alimentos en la via publica.<br>
       -Cubre tinacos, cisternas y depositos de agua.<br></p>
-      <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('estasss','','imagenes/0eu.jpg',1)"><img src="imagenes/eu.jpg" width="36%" height="38%" id="estasss"></a> 
+      <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('estasss','','imagenes/0eu.jpg',1)"><img src="imagenes/eu.jpg" width="44%" height="65%" id="estasss"></a> 
       <br>
        
       <br>
-       <img src="imagenes/tem.jpg" width="441" height="63%" >
+       <img src="imagenes/tem.jpg" width="554" height="85%" >
       <p>Total de asignaturas: 51<br>
 Asignaturas Obligatorias: 45<br>
 Asignaturas Optativas: 6<br>
@@ -191,7 +191,7 @@ Actividades culturales<br>
    <div data-role="collapsible" data-content-theme="false">
    <h1>Facultad de medicina (BUAP)</h1>
    <div>
-   <img src="imagenes/bene.jpg" width="368" height="49%" >
+   <img src="imagenes/bene.jpg" width="472" height="64%" >
    <p>Sede donde se ofrece:<br>
 -Puebla<br>
 -Tehuacán<br>
@@ -200,11 +200,11 @@ Actividades culturales<br>
 
 <p>Perfil de Ingreso<br></p>
 <br>
-<img src="imagenes/mis.jpg" width="355" height="64%" >
+<img src="imagenes/mis.jpg" width="453" height="75%" >
 <br>
 <p>Los estudiantes de nuevo ingreso deberán contar con los siguientes atributos:<br></p>
 <br>
-<img src="imagenes/meto.jpg" width="394" height="61%" >
+<img src="imagenes/meto.jpg" width="416" height="66%" >
 <br>
 <p>Conocimientos: Bases de las Ciencias Naturales, de las Ciencias Exactas y de las Ciencias Sociales y Dominio de la lengua española<br>
 Habilidades: Para la comunicación oral, escrita y corporal. Pensamiento lógico matemático. Comprensión de la lectura en el idioma inglés.<br>
@@ -243,7 +243,7 @@ LENGUA EXTRANJERA IV<br>
 Conocimientos: Bases de las Ciencias Naturales, de las Ciencias Exactas y de las Ciencias Sociales y Dominio de la lengua española
 Habilidades: Para la comunicación oral, escrita y corporal. Pensamiento lógico matemático.  Comprensión de la lectura en el idioma inglés.
 Actitudes y valores: Disposición para el trabajo colaborativo y grupal. Disposición  para el autoaprendizaje y la actualización continua. Alto sentido de responsabilidad, vocación de servicio y respeto a sus semejantes. <br></p>
-<img src="imagenes/g.jpg" width="364" height="50%" >
+<img src="imagenes/g.jpg" width="402" height="61%" >
    <a href="http://www.buap.mx/portal_pprd/wb/EDUCATIVA/medicina"><center> 
      <p>Dar click aquí</p>
      <p>&nbsp;</p>
@@ -266,7 +266,7 @@ Actitudes y valores: Disposición para el trabajo colaborativo y grupal. Disposi
   </h1></div>
 <div data-role="content" align="center">
   <div>
-  <img src="imagenes/in.jpg" width="383" height="66%" >
+  <img src="imagenes/in.jpg" width="457" height="83%" >
   <p>El plan de estudios consta de diez semestres, tiempo en el cual los cadetes permanecen  internos en el plantel, al egresar serán, ascendidos al grado de Guardiamarinas del Servicio de Ingenieros de la Armada, Ingeniero Mecánico Naval, (percibiendo el sueldo correspondiente a la jerarquía) quedando comisionados en unidades operativas por un año para la realización de sus prácticas profesionales.</p>
   <p>La formación académica es integral. La curricular contempla asignaturas tanto del área de las ciencias físicas y matemáticas como de las áreas de humanística, profesional y militar.<br>
 
@@ -292,7 +292,7 @@ En este mismo plantel hay un centro de convivencias " Club de Cadetes", un gimna
 
 No dejemos pasar que los cadetes estan internados durante un periodo de 5 años, y donde se le brinda a todo el personal area de descanso y dormitorios, donde tienen su espacio para estudio, locker para guardar artìculos personales y tener listo su uniforme dia a dia. <br></p>
 <p><br>
-  <img src="imagenes/o.jpg" width="360" height="50%" >
+  <img src="imagenes/o.jpg" width="498" height="74%" >
 </p>
 <p>&nbsp;</p>
 <a href="http://www.henm.edu.mx/CAN.html"><center> 
@@ -301,7 +301,7 @@ No dejemos pasar que los cadetes estan internados durante un periodo de 5 años,
 </center></a>
  <br>
  <p>La formación académica es integral. La curricular contempla asignaturas tanto del área de las ciencias físicas y matemáticas como de las áreas de humanística, profesional y militar.</p>
-    <img src="imagenes/inapro.jpg" width="369" height="67%" >
+    <img src="imagenes/inapro.jpg" width="437" height="83%" >
  </div>
 <div data-role="footer" data-theme="a" data-position="fixed">
      <h4>Aplicacion Carreras Universitarias, NPP</h4>
@@ -343,7 +343,7 @@ Realización de investigaciones diagnósticas de tipo social, organizacional y e
 Dominar la metodología de la disciplina para conocer, a través de la investigación, los procesos psicológicos que determinan la conducta del individuo, e intervenir objetivamente en los diversos campos de interacción social.</p>
 <a href="http://www.universidaduvm.mx/licenciatura-en-psicologia/"><center> Dar click aquí</center></a>
  <br>
- <img src="imagenes/r.jpg" width="417" height="56%" >
+ <img src="imagenes/r.jpg" width="478" height="72%" >
  <br>
  <p>Esta Licenciatura UVM está respaldada por la Red Iberoamericana de Psicología Laureate (RIPLA), que fomenta relaciones académicas muy productivas entre universidades de México, Brasil, España, Costa Rica, Perú, Chile, Ecuador y Panamá</p>
  <p>Campus que lo imparten</p>
