--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@ function MM_swapImage() { //v3.0
 	<script type="text/javascript" src="visor/engine1/script.js"></script>
 	<!-- End WOWSlider.com BODY section -->
           <p>Nohemi Perez Paredes                    
-          <p>Cuarto semestre Grupo;          
-          <p>Centro de Bachillerato Tecnológico Industrial y de Servicios No. <em>16</em><br>
+          <p>Cuarto semestre Grupo &quot;H&quot;<p>Centro de Bachillerato Tecnológico Industrial y de Servicios No. <em>16</em><br>
           </div>
-        <div><img src="imagenes/mimi.jpg" width="377" height="50%" ></div>
+        <div><img src="imagenes/mimi.jpg" width="479" height="52%" ></div>
      </div>
           </div>
           
@@ -152,13 +151,13 @@ El objeto de estudio de la Enfermería es el cuidado de la salud de la persona s
 Los alumnos requerirán dedicarle tiempo completo a la carrera, sobre todo en los primeros semestres.
 Durante la misma se realizan gastos para uniformes, libros y materiales, así como para el transporte a los campos clínicos hospitalarios y comunitarios.</p>
 <p>la Licenciatura en Enfermería y Licenciatura en Enfermería y Obstetricia capaz de aplicar estrategias de enseñanza aprendizaje en cada uno de los espacios que estén los universitarios, que de cómo resultado la formación de profesionales de enfermería con sólidos conocimientos disciplinarios, científicos y humanísticos; que impacten en la satisfacción de la sociedad y el éxito profesional de los egresados.<br></p>
-  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('pos','','imagenes/pos2.jpg',1)"><img src="imagenes/pos.jpg" width="44%" height="81%" id="pos"></a> <br>
+  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('pos','','imagenes/pos2.jpg',1)"><img src="imagenes/pos.jpg" width="47%" height="130%" id="pos"></a> <br>
       <br>
       <p>-No realices actividades al aire libre y si es posible no salgas.<br>
       -Para los ojos, usa lentes protectores, especialmente si usas lentes de contacto.<br>
       -Ante la caida de ceniza volcanica evita consumir alimentos en la via publica.<br>
       -Cubre tinacos, cisternas y depositos de agua.<br></p>
-      <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('estasss','','imagenes/0eu.jpg',1)"><img src="imagenes/eu.jpg" width="44%" height="65%" id="estasss"></a> 
+      <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('estasss','','imagenes/0eu.jpg',1)"><img src="imagenes/eu.jpg" width="49%" height="88%" id="estasss"></a> 
       <br>
        
       <br>
@@ -191,7 +190,7 @@ Actividades culturales<br>
    <div data-role="collapsible" data-content-theme="false">
    <h1>Facultad de medicina (BUAP)</h1>
    <div>
-   <img src="imagenes/bene.jpg" width="472" height="64%" >
+   <img src="imagenes/bene.jpg" width="536" height="77%" >
    <p>Sede donde se ofrece:<br>
 -Puebla<br>
 -Tehuacán<br>
@@ -266,7 +265,7 @@ Actitudes y valores: Disposición para el trabajo colaborativo y grupal. Disposi
   </h1></div>
 <div data-role="content" align="center">
   <div>
-  <img src="imagenes/in.jpg" width="457" height="83%" >
+  <img src="imagenes/in.jpg" width="503" height="88%" >
   <p>El plan de estudios consta de diez semestres, tiempo en el cual los cadetes permanecen  internos en el plantel, al egresar serán, ascendidos al grado de Guardiamarinas del Servicio de Ingenieros de la Armada, Ingeniero Mecánico Naval, (percibiendo el sueldo correspondiente a la jerarquía) quedando comisionados en unidades operativas por un año para la realización de sus prácticas profesionales.</p>
   <p>La formación académica es integral. La curricular contempla asignaturas tanto del área de las ciencias físicas y matemáticas como de las áreas de humanística, profesional y militar.<br>
 
@@ -292,7 +291,7 @@ En este mismo plantel hay un centro de convivencias " Club de Cadetes", un gimna
 
 No dejemos pasar que los cadetes estan internados durante un periodo de 5 años, y donde se le brinda a todo el personal area de descanso y dormitorios, donde tienen su espacio para estudio, locker para guardar artìculos personales y tener listo su uniforme dia a dia. <br></p>
 <p><br>
-  <img src="imagenes/o.jpg" width="498" height="74%" >
+  <img src="imagenes/o.jpg" width="528" height="79%" >
 </p>
 <p>&nbsp;</p>
 <a href="http://www.henm.edu.mx/CAN.html"><center> 
@@ -312,7 +311,8 @@ No dejemos pasar que los cadetes estan internados durante un periodo de 5 años,
 
 <div data-role="page" id="Pagina3" data-add-back-btn="true" data-theme="a">
    <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
- <h1>PSICOLOGÍA</h1><br>
+ <h1>PSICOLOGÍA<<br>
+  </h1></div>
 <div data-role="content" align="center">
   <div>
   <img src="imagenes/0uv.jpg" width=">35%" height="35%" >
@@ -343,7 +343,7 @@ Realización de investigaciones diagnósticas de tipo social, organizacional y e
 Dominar la metodología de la disciplina para conocer, a través de la investigación, los procesos psicológicos que determinan la conducta del individuo, e intervenir objetivamente en los diversos campos de interacción social.</p>
 <a href="http://www.universidaduvm.mx/licenciatura-en-psicologia/"><center> Dar click aquí</center></a>
  <br>
- <img src="imagenes/r.jpg" width="478" height="72%" >
+ <img src="imagenes/r.jpg" width="546" height="86%" >
  <br>
  <p>Esta Licenciatura UVM está respaldada por la Red Iberoamericana de Psicología Laureate (RIPLA), que fomenta relaciones académicas muy productivas entre universidades de México, Brasil, España, Costa Rica, Perú, Chile, Ecuador y Panamá</p>
  <p>Campus que lo imparten</p>
