--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ No dejemos pasar que los cadetes estan internados durante un periodo de 5 años,
 
 <div data-role="page" id="Pagina3" data-add-back-btn="true" data-theme="a">
    <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
- <h1>PSICOLOGÍA<<br>
+ <h1>PSICOLOGÍA<br>
   </h1></div>
 <div data-role="content" align="center">
   <div>
